--- a/wx-xcx/project.config.json
+++ b/wx-xcx/project.config.json
@@ -55,9 +55,10 @@
 			"current": -1,
 			"list": [
 				{
-					"id": -1,
-					"name": "pages/product/product",
-					"pathName": "pages/product/product",
+					"id": 0,
+					"name": "pages/detail/detail",
+					"pathName": "pages/detail/detail",
+					"query": "",
 					"scene": null
 				}
 			]
