--- a/nanhongpc/package.json
+++ b/nanhongpc/package.json
@@ -15,6 +15,7 @@
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "v-distpicker": "^1.2.2",
+    "vant": "^2.8.4",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.1",
@@ -26,6 +27,7 @@
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
+    "babel-plugin-import": "^1.13.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
