--- a/uni-xcx/hhwls/manifest.json
+++ b/uni-xcx/hhwls/manifest.json
@@ -60,7 +60,8 @@
         "setting" : {
             "urlCheck" : false,
             "postcss" : false,
-            "minified" : false
+            "minified" : false,
+            "es6" : true
         },
         "usingComponents" : true
     },
